--- a/ProjetoWeb/index.html
+++ b/ProjetoWeb/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Inter:wght@400;500&family=Noto+Serif:ital@1&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://github.com/LAtanks.png" type="image/x-icon">
     <title>Projeto</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -29,8 +30,34 @@
                   <a href="#" target="_blank">Kronos Labs</a>
                 </li>
               </ul>
+              <div id="social-links">
+                  <a href="" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                  </a>
+                  <a href="" target="_blank">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                  </a>
+                  <a href="" target="_blank">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                  </a>
+                  <a href="$" target="_blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                  </a>
+
+              </div>
             </div>
           </div>
+          <footer>
+            Feito com ♥ <a href="https://www.rocketseat.com.br" target="_blank"> Rocketseat</a>
+          </footer>
         </div>
+        <script
+          type="module"
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script
+          nomodule
+          src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+        ></script>
   </body>
 </html>
