--- a/ProjetoWeb/index.html
+++ b/ProjetoWeb/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,9 +13,16 @@
   <body>
         <div id="container">
           <div id="profile">
-            <img src="https://github.com/LAtanks.png" alt="Mayk brito sorrindo, usando oculos e camisa com fundo amarelo.">
+            <img src="./assets/avatar-light.png" alt="Mayk brito sorrindo, usando oculos e camisa com fundo amarelo.">
             <p>@LAtanks</p>
             <div>
+              <div id="switch" onclick="toggleMode()">
+                <button>
+                    
+                </button>
+                <span></span>
+              </div>
+
               <ul id="link-list">
                 <li>
                   <a href="#">Inscrever-se no NLW</a>
@@ -59,5 +66,6 @@
           nomodule
           src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
         ></script>
+        <script src="script.js"></script>
   </body>
 </html>
