--- a/ProjetoWeb/index.html
+++ b/ProjetoWeb/index.html
@@ -13,7 +13,7 @@
   <body>
         <div id="container">
           <div id="profile">
-            <img src="./assets/avatar-light.png" alt="Mayk brito sorrindo, usando oculos e camisa com fundo amarelo.">
+            <img src="https://github.com/LAtanks.png" alt="uma foto de LATanks transformada em anime, gerado por AI ">
             <p>@LAtanks</p>
             <div>
               <div id="switch" onclick="toggleMode()">
